errorRecord
{19-12-24 17:39}EarthRoute:~/Downloads@master✗✗✗✗✗✗ paul% python3 niu.py
Traceback (most recent call last):
  File "niu.py", line 109, in <module>
    F_values = F(T)
  File "niu.py", line 19, in F
    retArr = np.array()
TypeError: array() missing required argument 'object' (pos 1)
{19-12-24 17:48}EarthRoute:~/Downloads@master✗✗✗✗✗✗ paul% python3 niu.py
Traceback (most recent call last):
  File "niu.py", line 109, in <module>
    F_values = F(T)
  File "niu.py", line 21, in F
    retArr.append(np.sin(10*ele)*ele + np.cos(2*ele)*ele)
AttributeError: 'numpy.ndarray' object has no attribute 'append'
{19-12-24 17:48}EarthRoute:~/Downloads@master✗✗✗✗✗✗ paul% python3 niu.py
  File "niu.py", line 19
    retArr = []]
               ^
SyntaxError: invalid syntax
上面写的什么，写体系一些，太碎片了。改了什么地方？我看到的只是一部分报错后的调试过程。

下面是你的测试结果吧？

{19-12-24 17:50}EarthRoute:~/Downloads@master✗✗✗✗✗✗ paul% python3 niu.py
the average of fitness: 8.840758124821482
r = 24
len(S_total):  38
len(R_total):  38
===============================
38 <<<<R1_invert.len
R1_invert = [3.489247311827957, 3.668621700879765, 1.3856304985337244, 3.7908113391984357, 3.3123167155425217, 3.2864125122189636, 1.8944281524926685, 3.5303030303030303, 3.2707722385141738, 3.7155425219941343, 3.478005865102639, 2.02297165200391, 3.510752688172043, 3.4853372434017595, 3.6539589442815243, 1.7072336265884653, 2.0386119257087, 1.6114369501466275, 3.740957966764418, 1.7140762463343107, 3.222873900293255, 3.199902248289345, 0.6652003910068426, 2.4701857282502444, 0.6515151515151514, 3.158357771260997, 2.821114369501466, 1.6735092864125123, 3.142228739002932, 3.2776148582600193, 2.6295210166177903, 3.1695992179863146, 2.704301075268817, 3.9227761485825994, 2.2834799608993155, 3.3910068426197455, 2.3059628543499513, 3.4095796676441834]
===============================

100 <<<<R1.len
===============================
R1 = [3.489247311827957, 3.668621700879765, 1.3856304985337244, 3.7908113391984357, 3.3123167155425217, 3.2864125122189636, 1.8944281524926685, 3.5303030303030303, 3.2707722385141738, 3.7155425219941343, 3.478005865102639, 2.02297165200391, 3.510752688172043, 3.4853372434017595, 3.6539589442815243, 1.7072336265884653, 2.0386119257087, 1.6114369501466275, 3.740957966764418, 1.7140762463343107, 3.222873900293255, 3.199902248289345, 0.6652003910068426, 2.4701857282502444, 0.6515151515151514, 3.158357771260997, 2.821114369501466, 1.6735092864125123, 3.142228739002932, 3.2776148582600193, 2.6295210166177903, 3.1695992179863146, 2.704301075268817, 3.9227761485825994, 2.2834799608993155, 3.3910068426197455, 2.3059628543499513, 3.4095796676441834, 2.927663734115347, 4.5307917888563045, 3.494623655913979, 3.3431085043988267, 0.5913978494623656, 0.4105571847507331, 3.088954056695992, 3.2893450635386117, 2.043010752688172, 2.697947214076246, 3.9345063538611926, 0.2981427174975562, 0.5718475073313782, 0.8015640273704789, 4.06158357771261, 3.4995112414467258, 2.649071358748778, 3.2991202346041053, 4.0175953079178885, 0.8162267839687194, 2.727272727272727, 0.8797653958944283, 3.4506353861192576, 2.9765395894428153, 2.9912023460410557, 3.787878787878788, 3.2111436950146626, 1.4271749755620724, 2.482893450635386, 0.17595307917888564, 3.333333333333333, 2.0869990224828934, 0.6744868035190615, 2.727272727272727, 3.787878787878788, 0.2590420332355816, 1.4613880742913001, 0.7331378299120235, 0.19550342130987292, 4.5845552297165195, 0.9090909090909092, 2.9472140762463344, 2.1309872922776147, 3.2404692082111435, 0.8797653958944283, 0.3567937438905181, 0.21994134897360706, 2.697947214076246, 2.6295210166177907, 2.761485826001955, 4.042033235581623, 3.4213098729227758, 1.9696969696969697, 4.589442815249266, 3.01564027370479, 4.594330400782013, 1.4418377321603129, 1.989247311827957, 2.8152492668621703, 3.279569892473118, 2.825024437927664, 2.9960899315738025]
===============================
max_fitness: 25
fitness: [9.49429126e+00 8.95668182e-01 9.45778177e+00 1.06323887e+01
 1.53914066e+01 9.30804545e+00 6.87134896e+00 9.24021497e+00
 7.90826358e+00 1.08176430e+01 1.57195346e+01 1.90921915e+00
 3.00415194e+00 1.01430071e+01 1.35973985e+01 1.31619804e+01
 6.08104856e+00 9.59195780e+00 2.80058373e+00 9.22856069e+00
 1.00629196e+01 9.12320002e+00 1.04552984e+01 1.33515018e+01
 7.89515183e+00 1.57335404e+01 4.15184853e+00 1.10519794e+01
 5.78493221e+00 8.25876061e+00 1.00251694e+01 1.34383093e+01
 9.64892261e+00 1.00000000e-03 1.22864252e+01 9.14646537e+00
 9.17011948e+00 1.10149881e+01 1.45354733e+01 7.82412909e+00
 6.45344655e+00 9.34328595e+00 5.78493221e+00 9.17739722e+00
 6.96070407e+00 9.63571690e+00 1.55240424e+01 8.31578283e+00
 1.01071592e+01 9.74656434e+00 1.90921915e+00 1.34383093e+01
 5.55578513e+00 5.39960664e+00 5.02985645e+00 1.10149881e+01
 6.71984710e+00 7.03127872e+00 2.58547551e-01 9.65842270e+00
 9.16963122e+00 5.95105000e+00 7.82412909e+00 1.00094873e+01
 9.65971423e+00 6.96375876e+00 3.00415194e+00 9.25207046e+00
 9.37301885e+00 3.88569826e+00 9.28044362e+00 9.71207960e+00
 1.51819517e+01 9.64892261e+00 1.21558979e+00 9.41991032e+00
 9.67461906e+00 6.95314590e+00 1.35973985e+01 7.50216353e+00
 8.01066864e+00 6.94013649e+00 1.30779628e+01 1.29909053e+01
 1.00254462e+01 1.33526772e+01 9.39874139e+00 2.51980468e+00
 9.17099546e+00 9.34746053e+00 9.07983376e+00 9.28877425e+00
 7.82412909e+00 9.68385240e+00 1.18764721e+01 1.56731230e+01
 1.16432311e+01 9.19180526e+00 7.56903155e+00 4.85230481e+00]
F_values: [ 1.96573158e-01 -8.40204992e+00  1.60063668e-01  1.33467058e+00
  6.09368846e+00  1.03273507e-02 -2.42636914e+00 -5.75031347e-02
 -1.38945452e+00  1.51992490e+00  6.42181648e+00 -7.38849895e+00
 -6.29356616e+00  8.45288998e-01  4.29968040e+00  3.86426226e+00
 -3.21666954e+00  2.94239697e-01 -6.49713437e+00 -6.91574154e-02
  7.65201539e-01 -1.74518078e-01  1.15758026e+00  4.05378372e+00
 -1.40256628e+00  6.43582232e+00 -5.14586957e+00  1.75426133e+00
 -3.51278589e+00 -1.03895749e+00  7.27451344e-01  4.14059123e+00
  3.51204506e-01 -9.29671810e+00  2.98870705e+00 -1.51252726e-01
 -1.27598620e-01  1.71726996e+00  5.23775517e+00 -1.47358901e+00
 -2.84427155e+00  4.55678514e-02 -3.51278589e+00 -1.20320880e-01
 -2.33701403e+00  3.37998800e-01  6.22632427e+00 -9.81935271e-01
  8.09441096e-01  4.48846239e-01 -7.38849895e+00  4.14059123e+00
 -3.74193297e+00 -3.89811147e+00 -4.26786165e+00  1.71726996e+00
 -2.57787101e+00 -2.26643938e+00 -9.03917055e+00  3.60704602e-01
 -1.28086881e-01 -3.34666810e+00 -1.47358901e+00  7.11769178e-01
  3.61996126e-01 -2.33395934e+00 -6.29356616e+00 -4.56476440e-02
  7.53007474e-02 -5.41201984e+00 -1.72744775e-02  4.14361500e-01
  5.88423356e+00  3.51204506e-01 -8.08212831e+00  1.22192222e-01
  3.76900963e-01 -2.34457220e+00  4.29968040e+00 -1.79555457e+00
 -1.28704946e+00 -2.35758161e+00  3.78024467e+00  3.69318716e+00
  7.27728055e-01  4.05495912e+00  1.01023285e-01 -6.77791342e+00
 -1.26722637e-01  4.97424313e-02 -2.17884345e-01 -8.94385325e-03
 -1.47358901e+00  3.86134295e-01  2.57875398e+00  6.37540488e+00
  2.34551298e+00 -1.05912845e-01 -1.72868655e+00 -4.44541329e+00]
T's value : [2.92766373 4.79960899 4.53079179 3.49462366 3.3431085  0.59139785
 4.42815249 0.41055718 3.66080156 3.08895406 3.28934506 4.96089932
 4.74584555 2.04301075 2.69794721 3.93450635 1.77419355 0.29814272
 4.98044966 0.57184751 0.80156403 4.06158358 3.49951124 2.64907136
 3.60215054 3.29912023 4.72140762 4.01759531 4.68719453 2.21896383
 0.81622678 2.72727273 0.8797654  4.83870968 3.45063539 2.97653959
 2.99120235 3.78787879 3.2111437  3.65102639 4.67253177 1.42717498
 4.68719453 2.48289345 2.36070381 0.17595308 3.33333333 1.00195503
 2.08699902 0.6744868  4.96089932 2.72727273 4.69208211 4.13978495
 4.37927664 3.78787879 1.82795699 1.61290323 4.82404692 0.25904203
 1.46138807 1.71554252 3.65102639 0.73313783 0.19550342 1.84261975
 4.74584555 4.58455523 0.90909091 4.17888563 2.94721408 2.13098729
 3.24046921 0.8797654  4.78983382 0.35679374 0.21994135 2.32160313
 2.69794721 1.13391984 1.03128055 2.35581623 2.62952102 2.76148583
 4.04203324 3.42130987 1.96969697 4.24731183 4.58944282 3.01564027
 4.5943304  1.44183773 3.65102639 1.98924731 2.81524927 3.27956989
 2.82502444 2.99608993 1.09481916 4.37438905]
